crates/amaru-observability/macros/tests/ui/compile_fail/custom_expr_wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/custom_expr_wrong_type.rs:19:1
   |
19 | / define_local_schemas! {
20 | |     test {
21 | |         example {
22 | |             /// Test schema for custom expression type validation
...  |
28 | | }
   | | ^
   | | |
   | |_expected `&u64`, found `&&str`
   |   arguments to this function are incorrect
29 |
30 |   #[trace(test::example::STRICT_EXPR_TYPE, fee = "nah")]
   |   ------------------------------------------------------ in this attribute macro expansion
   |
   = note: expected reference `&u64`
              found reference `&&str`
note: closure parameter defined here
  --> tests/ui/compile_fail/custom_expr_wrong_type.rs:19:1
   |
19 | / define_local_schemas! {
20 | |     test {
21 | |         example {
22 | |             /// Test schema for custom expression type validation
...  |
28 | | }
   | |_^
29 |
30 |   #[trace(test::example::STRICT_EXPR_TYPE, fee = "nah")]
   |   ------------------------------------------------------ in this attribute macro expansion
   = note: this error originates in the macro `__TEST__EXAMPLE__STRICT_EXPR_TYPE_RECORD` which comes from the expansion of the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
